Update homepage, add stripe button

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Story of Brickmaking
+title: The Story of Brickmaking
 description: >- # this means to ignore newlines until "baseurl:"
   The Story of Brickmaking in Pollagh, County Offaly - a book by Caitriona Devery
 url: "story-of-brickmaking"
